--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,5 @@
-    <div id="navbarDom">{{> navbar }}</div>
-    {{> header}}
+{{> navbar}}
 
-    {{> footer}}   
-    <!-- Theme JavaScript -->
-    <script async src="js/main/main.min.js"></script>
+{{> page}}
+<!-- Theme JavaScript -->
+<script async src="js/dashboard/dashboard.min.js"></script>
