--- a/templates/partials/main/login.html
+++ b/templates/partials/main/login.html
@@ -1,10 +1,10 @@
 <div id="login-form" role="form" style="display: block;">
     <h2>LOGIN</h2>
     <div class="form-group">
-        <input type="text" name="login-username" id="login-username" tabindex="1" class="form-control" placeholder="Username" value="react">
+        <input type="text" name="login-username" id="login-username" tabindex="1" class="form-control" placeholder="Username" value="callcenter">
     </div>
     <div class="form-group">
-        <input type="password" name="login-password" id="login-password" tabindex="2" class="form-control" placeholder="Password" value="express">
+        <input type="password" name="login-password" id="login-password" tabindex="2" class="form-control" placeholder="Password" value="12345">
     </div>
     <div class="col-xs-6 form-group pull-left checkbox">
         <input id="checkbox1" type="checkbox" name="remember">
