loading html modules on menu click

--- a/templates/dashboard/partials/header.html
+++ b/templates/dashboard/partials/header.html
@@ -6,7 +6,7 @@
         </h1>
         <ol class="breadcrumb">
             <li class="active">
-                <i class="fa fa-dashboard"></i> {{pageSubHeading}}
+                <i class="fa {{pageIcon}}"></i> {{pageSubHeading}}
             </li>
         </ol>
     </div>
