--- a/templates/dashboard/pages/managetrips.html
+++ b/templates/dashboard/pages/managetrips.html
@@ -1,6 +1,7 @@
 <style>
 .manage-trips{color:red}.manage-trips-content{color:pink}
 </style>
+{{> header}}
 <div class='manage-trips'>
     Manage Trips
     <div class='manage-trips-content'>
@@ -8,5 +9,5 @@
     </div>
 </div> 
 <script type="text/javascript">
-    alert("Manage Trips");
+    console.log("Manage Trips");
 </script>
