--- a/templates/main/partials/navbar.html
+++ b/templates/main/partials/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link page-scroll" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#about">About</a>
+                    <a class="nav-link page-scroll" href="#about">Howitworks</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#pricing">Pricing</a>
