--- a/templates/main/partials/portfolio.html
+++ b/templates/main/partials/portfolio.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-xs-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -18,8 +18,8 @@
                         <img src="img/portfolio/roundicons.png" class="img-fluid" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>24x7 support</h4>
+                        <p class="text-muted">Dedicated support</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -32,8 +32,8 @@
                         <img src="img/portfolio/startup-framework.png" class="img-fluid" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Rating system</h4>
+                        <p class="text-muted">Choose best rated services</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -46,8 +46,8 @@
                         <img src="img/portfolio/treehouse.png" class="img-fluid" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Affordable price</h4>
+                        <p class="text-muted">No hidden costs</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -60,8 +60,8 @@
                         <img src="img/portfolio/golden.png" class="img-fluid" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Free Posting Load or truck</h4>
+                        <p class="text-muted">user can post job to get bids</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -74,8 +74,8 @@
                         <img src="img/portfolio/escape.png" class="img-fluid" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Choose best truck</h4>
+                        <p class="text-muted">filter out trucks suitable for the job</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -88,8 +88,8 @@
                         <img src="img/portfolio/dreams.png" class="img-fluid" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Transparancy and Security</h4>
+                        <p class="text-muted">All the documents available online</p>
                     </div>
                 </div>
             </div>
