--- a/templates/main/partials/pricing.html
+++ b/templates/main/partials/pricing.html
@@ -3,60 +3,83 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-xs-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Pricing</h2>
+                    <h3 class="section-subheading text-muted">These are the best packages available.</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-fluid rounded-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
+               
+                    <div class='pricing-plans wrapper'>
+                      <div class='package'>
+                        <div class='name'>Limited</div>
+                        <div class='price'>€2</div>
+                        <div class='trial'>Available for a month</div>
+                        <hr>
+                        <ul>
+                          <li>
+                            <strong>8</strong>
+                            team members
+                          </li>
+                          <li>
+                            <strong>6</strong>
+                            team playlists
+                          </li>
+                          <li>
+                            <strong>Unlimited</strong>
+                            public playlists
+                          </li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-fluid rounded-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
+                      </div>
+                      <div class='package brilliant'>
+                        <div class='name'>Brilliant</div>
+                        <div class='price'>€5</div>
+                        <div class='trial'>Free 30 day trial</div>
+                        <hr>
+                        <ul>
+                          <li>
+                            <strong>Unlimited</strong>
+                            team members
+                          </li>
+                          <li>
+                            <strong>Unlimited</strong>
+                            team playlists
+                          </li>
+                          <li>
+                            <strong>Unlimited</strong>
+                            public playlists
+                          </li>
+                          <li>
+                            Team analytics
+                          </li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-fluid rounded-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
+                      </div>
+                      <div class='package'>
+                        <div class='name'>Basic</div>
+                        <div class='price'>€0</div>
+                        <div class='trial'>Totally free</div>
+                        <hr>
+                        <ul>
+                          <li>
+                            <strong>5</strong>
+                            team members
+                          </li>
+                          <li>
+                            <strong>3</strong>
+                            team playlists
+                          </li>
+                          <li>
+                            <strong>Unlimited</strong>
+                            public playlists
+                          </li>
                         </ul>
+                      </div>
                     </div>
-                </div>
+                   
+
             </div>
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 text-xs-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Did not find what you looking for ? feel free to contact us we will work this out.</p>
                 </div>
             </div>
         </div>
