color and text on index changes

--- a/css/main/style.css
+++ b/css/main/style.css
@@ -250,7 +250,7 @@ header .intro-text .intro-heading {
   }
 }
 section {
-  padding: 100px 0;
+  padding: 70px 0;
 }
 section h2.section-heading {
   font-size: 40px;
@@ -264,11 +264,6 @@ section h3.section-subheading {
   font-style: italic;
   font-weight: 400;
   margin-bottom: 75px;
-}
-@media (min-width: 768px) {
-  section {
-    padding: 150px 0;
-  }
 }
 .service-heading {
   margin: 15px 0;
@@ -925,7 +920,7 @@ label {
   box-sizing: border-box;
   width: 301px;
   height: 380px;
-  border: 3px solid #e8e8e8;
+  border: 3px solid #FED137;
   border-radius: 7px;
   display: inline-block;
   padding: 24px;
@@ -991,7 +986,7 @@ label {
   margin-right: 3px;
 }
 .pricing-plans .brilliant {
-  border-color: #33c4b6;
+  border-color: #FED137;
 }
 .pricing-plans .brilliant::before {
   width: 0;
