--- a/less/main/style.less
+++ b/less/main/style.less
@@ -193,7 +193,7 @@ header {
 // Global Section Styles
 
 section {
-    padding: 100px 0;
+    padding: 70px 0;
     h2.section-heading {
         font-size: 40px;
         margin-top: 0;
@@ -211,7 +211,7 @@ section {
 
 @media(min-width:768px) {
     section {
-        padding: 150px 0;
+   //     padding: 150px 0;
     }
 }
 
@@ -919,7 +919,7 @@ label {
     box-sizing: border-box;
     width: 301px;
     height: 380px;
-    border: 3px solid #e8e8e8;
+    border: 3px solid #FED137;
     border-radius: 7px;
     display: inline-block;
     padding: 24px;
@@ -984,7 +984,7 @@ li::before {
     margin-right: 3px;
 }
 .brilliant {
-    border-color: @greenColor;
+    border-color: #FED137;
 }
 /* Triangle */
 .brilliant::before {
