--- a/templates/main/partials/services.html
+++ b/templates/main/partials/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-xs-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Never sent an empty truck back.</h3>
+                    <h3 class="section-subheading text-muted">Never send an empty truck back.</h3>
                 </div>
             </div>
             <div class="row text-xs-center">
@@ -14,8 +14,8 @@
                         <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Stay Connected</h4>
-                    <p class="text-muted">User can see where goods or trucks
-                        currently located and status of the current job</p>
+                    <p class="text-muted">Allways connected to the truck drivers and the goods using maps
+                    and location services.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -23,8 +23,7 @@
                         <i class="fa fa-inr fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Best fit</h4>
-                    <p class="text-muted">User can post a job to get bids and can choose
-                    the best price that is suitable for the job</p>
+                    <p class="text-muted">Flexibility to choose best price for a service from a number of bids.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -33,7 +32,7 @@
                     </span>
                     <h4 class="service-heading">Verified</h4>
                     <p class="text-muted">All the trucks and drivers are verfied and documents are
-                    available to the user who is giving the job.</p>
+                    available online, no chance to mishap.</p>
                 </div>
             </div>
         </div>
