--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -332,3 +332,8 @@ ul.alert-dropdown {
 .bg-white {
     background: #fff;
 }
+
+/* alpaca overrides */
+[type=checkbox], [type=radio] {
+  margin-right: 5px;
+}
