--- a/templates/dashboard/pages/addTrip/addTrip.html
+++ b/templates/dashboard/pages/addTrip/addTrip.html
@@ -1,7 +1,7 @@
 {{> header}}
 <div class='new-trips'>
-    New Trips
     <div class='new-trips-content'>
-            New Trips Content
+    </div>
+    <div class='new-trips-content-test'>
     </div>
 </div> 
