Services, forms & navigation history

--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -337,3 +337,11 @@ ul.alert-dropdown {
 [type=checkbox], [type=radio] {
   margin-right: 5px;
 }
+
+.hide-ele{
+    display: none !important;
+}
+
+.list-group-item a.active {
+    background-color: black; 
+}
