--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -2,9 +2,9 @@
 
 <div id="page-wrapper">
     <div class="container-fluid">        
-        <div id="content-wrapper">            
-            {{> content}}
-        </div>            
+        <div id="content-wrapper">  
+             {{> (whichPage)}}
+        </div>                    
     </div>
 </div>
 {{> footer}}
