--- a/templates/dashboard/partials/header.html
+++ b/templates/dashboard/partials/header.html
@@ -1,10 +1,10 @@
  <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">
+        <!--<h1 class="page-header">
             {{pageHeading}}
-        </h1>
-        <ol class="breadcrumb">
+        </h1>-->
+        <ol class="breadcrumb" style="margin-top: 10px;">
             <li class="active">
                 <i class="fa {{pageIcon}}"></i> {{pageSubHeading}}
             </li>
