--- a/css/dashboard/style.css
+++ b/css/dashboard/style.css
@@ -277,3 +277,9 @@ ul.alert-dropdown {
 [type=radio] {
   margin-right: 5px;
 }
+.hide-ele {
+  display: none !important;
+}
+.list-group-item a.active {
+  background-color: black;
+}
