--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -337,6 +337,9 @@ ul.alert-dropdown {
 [type=checkbox], [type=radio] {
   margin-right: 5px;
 }
+.alpaca-layout-binding-holder {
+    margin-bottom: 10px;
+}
 
 .hide-ele{
     display: none !important;
