--- a/templates/dashboard/pages/addTrip.html
+++ b/templates/dashboard/pages/addTrip.html
@@ -4,5 +4,5 @@
     </div>
 </div> 
 <script type="text/javascript">
-    console.log(JSON.stringify(UTILS.getCurrentTemplateData())),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();e.options={fields:{pickup:{order:1},drop:{order:2},vehicleRequirements:{order:3},comments:{order:4},totalWeight:{order:5}}},FORM_HELPER.draw(".new-trips-content",e,{bindings:{pickup:"column-1",drop:"column-2",vehicleRequirements:"column-1",comments:"column-2",totalWeight:"column-1"}})});
+    console.log(UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();e.options={fields:{pickup:{order:1},drop:{order:2},vehicleRequirements:{order:3},comments:{order:4},totalWeight:{order:5}}},FORM_HELPER.draw(".new-trips-content",e,{bindings:{pickup:"column-1",drop:"column-2",vehicleRequirements:"column-1",comments:"column-2",totalWeight:"column-2"}})});
 </script>
