--- a/css/dashboard/style.css
+++ b/css/dashboard/style.css
@@ -280,6 +280,17 @@ ul.alert-dropdown {
 .alpaca-layout-binding-holder {
   margin-bottom: 10px;
 }
+.alpaca-helper {
+  font-size: 12px !important;
+}
+.alpaca-message {
+  font-size: 12px !important;
+  color: red;
+  padding-left: 15px;
+}
+.glyphicon-star {
+  font-size: 9px;
+}
 .hide-ele {
   display: none !important;
 }
