--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -341,6 +341,21 @@ ul.alert-dropdown {
     margin-bottom: 10px;
 }
 
+.alpaca-helper {
+    font-size: 12px !important;
+}
+.alpaca-message {
+    font-size: 12px !important;
+    color: red;
+    padding-left: 15px;
+} 
+
+// .alpaca-message-invalidPattern {    
+// }
+.glyphicon-star {
+    font-size: 9px;
+}
+
 .hide-ele{
     display: none !important;
 }
