Grid ui changes

--- a/templates/dashboard/pages/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip.html
@@ -5,13 +5,13 @@
 <div class='manage-trips'>
     Manage Trips
     <div class='manage-trips-content'>
-            Manage Trips Content<br/>
-            {{#each templateData}}
+            <!--Manage Trips Content<br/>-->
+            <!--{{#each templateData}}
                 {{stringify this}}
                 <br/>
-            {{/each}}            
+            {{/each}}            -->
     </div>
 </div> 
 <script type="text/javascript">
-    console.log("Manage Trips");
+    console.log("Manage Trips"),console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){});
 </script>
