--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -2,10 +2,10 @@
 <div class='manage-trips'>
     Manage Trips
     <div class='manage-trips-content'>
-            Manage Trips Content<br/>
-            {{#each templateData}}
+            <!--Manage Trips Content<br/>-->
+            <!--{{#each templateData}}
                 {{stringify this}}
                 <br/>
-            {{/each}}            
+            {{/each}}            -->
     </div>
 </div> 
