--- a/templates/dashboard/pages/addTruck.html
+++ b/templates/dashboard/pages/addTruck.html
@@ -1,3 +1,5 @@
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
 {{> header}}
 <div class='new-trucks'>
     New Trucks
@@ -5,3 +7,5 @@
             New Trucks Content
     </div>
 </div> 
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
