--- a/templates/dashboard/pages/manageTrip/manageTrip.less
+++ b/templates/dashboard/pages/manageTrip/manageTrip.less
@@ -1,6 +1,6 @@
-.manage-trips {
-    color: red;
-    &-content {
-        color: pink;
-    }
-}
+// .manage-trips {
+//     color: red;
+//     &-content {
+//         color: pink;
+//     }
+// }
