--- a/templates/dashboard/pages/manageTruck.html
+++ b/templates/dashboard/pages/manageTruck.html
@@ -1,3 +1,5 @@
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
 {{> header}}
 <div class='manage-trucks'>
     Manage Trucks
@@ -5,3 +7,5 @@
             Manage Trucks Content
     </div>
 </div> 
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
