--- a/templates/dashboard/pages/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip.html
@@ -1,6 +1,5 @@
-<style>
-.manage-trips{color:red}.manage-trips-content{color:pink}
-</style>
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
 {{> header}}
 <div class='manage-trips'>
     Manage Trips
@@ -12,6 +11,23 @@
             {{/each}}            -->
     </div>
 </div> 
-<script type="text/javascript">
-    console.log("Manage Trips"),console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){});
+{{{{raw-helper}}}}
+<script id="grid-header-template" type="text/x-handlebars-template">
+  I am Header <br/>
 </script>
+<script id="grid-row-template" type="text/x-handlebars-template">
+  I am Row {{_id}} totalWeight: {{totalWeight}}  {{vehicleRequirements.capacityUnit}}
+  {{#each pickup}}
+        {{date}}
+        {{#each contact}}
+            {{firstName}}
+        {{/each}}
+  {{/each}}
+  <br/>
+</script>
+{{{{/raw-helper}}}}
+{{{{raw-helper}}}}
+<script type="text/javascript">
+    console.log("Manage Trips"),console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData(),t=Handlebars.compile("{{> grid }}");$(".manage-trips-content").html(t({gridData:e.data,headerTemplateId:"grid-header-template",gridId:"gridManageTrips",postRender:function(){console.log(arguments)},rowConfig:{template:"grid-row-template",rowId:"row{{_id}}",preRender:function(e){return e},postRender:function(e,t){return console.log(" hu ha ",e,t),"hu ha"}}}))});
+</script>
+{{{{/raw-helper}}}}
