--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -1,7 +1,7 @@
 {{> header}}
 <div class='manage-trips'>
-    Manage Trips
-    <div class='manage-trips-content'>
+    <!-- Manage Trips -->
+    <div class='manage-trips-content' style="outline: 1px solid orange;">
             <!--Manage Trips Content<br/>-->
             <!--{{#each templateData}}
                 {{stringify this}}
@@ -11,16 +11,68 @@
 </div> 
 {{{{raw-helper}}}}
 <script id="grid-header-template" type="text/x-handlebars-template">
-  I am Header <br/>
+  <!-- I am Header <br/> -->
+   <div class="container-fluid" >
+    <div class="row">
+         <div class="col-sm-2">
+            <b>Vechicle Type</b>
+         </div>
+         <div class="col-sm-2">
+            <b>Total Weight</b>
+         </div>
+         <div class="col-sm-2">
+            <b>Pick Up</b>
+         </div>
+         <div class="col-sm-2">
+            <b>Drop Off</b>
+         </div>
+         <div class="col-sm-2">
+            <b>Comments</b>
+         </div>
+         <div class="col-sm-2">
+            <b>Quote</b>
+         </div>
+    </div>
+    </div>
+    <br/>
 </script>
 <script id="grid-row-template" type="text/x-handlebars-template">
-  I am Row {{_id}} totalWeight: {{totalWeight}}  {{vehicleRequirements.capacityUnit}}
-  {{#each pickup}}
-        {{date}}
-        {{#each contact}}
-            {{firstName}}
-        {{/each}}
-  {{/each}}
-  <br/>
+
+  <div class="container-fluid" style="border-top: 1px solid orange;">
+    <div class="row">
+      <div class="col-sm-2">
+          {{vehicleRequirements.vechicleType}}
+        </div>
+        <div class="col-sm-2">
+          {{totalWeight}} tons
+        </div>
+        <div class="col-sm-2">
+            {{#each pickup}}
+              {{address.city}} {{date}}
+            {{/each}}
+        </div>
+        <div class="col-sm-2">
+          {{#each drop}}
+              {{address.city}} {{date}}
+          {{/each}}
+        </div>
+        <div class="col-sm-2">
+            {{comments}}
+        </div>
+        <div class="col-sm-2">
+              <button type="submit" class="btn btn-default  text-capitalize"><p class="text-capitalize">Quote</p></button>
+        </div>
+    </div>
+  </div>
+
+  <!-- I am Row {{_id}} totalWeight: {{totalWeight}}  {{vehicleRequirements.capacityUnit}}
+   {{#each pickup}}
+       {{date}}
+       {{#each contact}}
+           {{firstName}}
+       {{/each}}
+   {{/each}}  -->
+
+<br/>
 </script>
 {{{{/raw-helper}}}}
